[gd_scene load_steps=7 format=2]

[ext_resource path="res://artwork/note.png" type="Texture" id=1]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/prefabs/note.gd" type="Script" id=3]
[ext_resource path="res://sounds/note_pick_up.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 960
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 963.013, 462.328 )

[node name="Note" type="Sprite"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="QuestionMark" type="Label" parent="."]
margin_left = -163.073
margin_top = -1499.95
margin_right = 196.927
margin_bottom = -739.949
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
